--- a/app/locale/zh_CN/Mage_Cms.csv
+++ b/app/locale/zh_CN/Mage_Cms.csv
@@ -63,3 +63,29 @@
 "Title","标题"
 "Unable to find a block to delete","没有找到要删除的方框"
 "Unable to find a page to delete","没有找到要删除的页面"
+"HOME","首页"
+"BRAND","品牌"
+"HISTORY","大事记"
+"EVENTS","新闻"
+"PRODUCT","产品"
+"CAMPAIGN","视觉形象大片"
+"LOOK BOOK","产品目录"
+"STREET SNAP","型格街拍大赏"
+"STORE","门店"
+"STAR STORE","明星门店"
+"STORE LOCATOR","门店查找"
+"VIP CLUB","会员"
+"LILY CLUB","Lily 会员"
+"TERMS","条款"
+"POINT CHECKING","积分查看"
+"REDEMPTION","积分兑换"
+"MEMBER<br>REGISTRATION","会员注册"
+"JOB","招聘"
+"CONTACT","联系我们"
+"PRIVACY","法律法规"
+"Terms of lily membership", "会员章程"
+"Remember me", "记住我"
+"Forget your Password", "忘记密码"
+"Retrieve your password here", ""
+"Please enter your email address below. You will receive a link to reset your password.","输入邮箱地址。您将会收到重置密码的邮件。"
+"<p>Welcome to be a member of Lily club! </p>If you are not a lily club member, you can click the “Register Now” button to be our member. Free 200 points upon registration, countable with off-line purchases.","<p>欢迎来到Lily club! </p>如果您还不是Lily的会员，可以单击“立即注册”成为我们的粉丝。<br/>注册即送200积分，累计线下消费"
