--- a/app/locale/zh_CN/Mage_Cms.csv
+++ b/app/locale/zh_CN/Mage_Cms.csv
@@ -83,6 +83,18 @@
 "JOB","招聘"
 "CONTACT","联系我们"
 "PRIVACY","法律法规"
+"Account informations","帐号信息"
+"My wishlist","我的收藏"
+"MY WISHLIST","我的收藏"
+"Point informations","积分明细"
+"point<br>history","积分兑换订单"
+"Giftcard","礼品车"
+"E-coupon","电子券"
+"LOGOUT","退出"
+"Hi","您好"
+"Welcome to Lily Club","欢迎来到Lily会员中心"
+"Your remaining points","您的可用积分为:"
+"are %s point(s)","%s分"
 "Terms of lily membership", "会员章程"
 "Remember me", "记住我"
 "Forget your Password", "忘记密码"
