--- a/app/locale/zh_CN/Mage_Sales.csv
+++ b/app/locale/zh_CN/Mage_Sales.csv
@@ -515,7 +515,7 @@
 "Gift history","积分兑换订单"
 "Order Type","订单类型"
 "Exchange From Webstore","网站兑换"
-"Order Num","订单编号"
+"Order Num","单据编号"
 "Gift Of Order","订单礼品"
 "Operation","操作"
 "Member Info:","会员信息："
