--- a/app/locale/zh_CN/Mage_Cms.csv
+++ b/app/locale/zh_CN/Mage_Cms.csv
@@ -84,12 +84,14 @@
 "CONTACT","联系我们"
 "PRIVACY","法律法规"
 "Account informations","帐号信息"
+"Member<br />Information","帐号信息"
 "My wishlist","我的收藏"
 "MY WISHLIST","我的收藏"
 "Point informations","积分明细"
-"point<br>history","积分兑换订单"
+"Point<br />History","积分兑换订单"
 "Giftcard","礼品车"
 "E-coupon","电子券"
+"Gift Exchange","礼品兑换"
 "LOGOUT","退出"
 "Hi","您好"
 "Welcome to Lily Club","欢迎来到Lily会员中心"
@@ -98,6 +100,33 @@
 "Terms of lily membership", "会员章程"
 "Remember me", "记住我"
 "Forget your Password", "忘记密码"
+"Birthday","生日"
+"Zip/Post code","邮编"
+"E-mail","电子邮件"
+"VIP Card","会员卡号"
+"VIP level","会员等级"
+"E coupon","电子券"
+"Change password","修改密码"
+"Current password*","当前密码*"
+"New password*","新密码*"
+"Confirm new password*","确认新密码*"
+"GIFT DETAIL","礼品详情"
+"POINT","积分"
+"WISHLIST ADD DATE","收藏日期"
+"OPERATION","操作"
+"Point<br />Information","积分明细"
+"Point<br />Exchange","积分兑换"
+"Receipt","记录"
+"AMOUNT","数量"
+"DATE","日期"
+"FILTER","筛选"
+"Point","积分"
+"Ship To", "收货人"
+"You have no items in your shopping cart.","您的购物车中还没有商品"
+"Return to gift page","返回礼品页面"
+"Ecoupon<br />Information","电子券信息"
+"For system reason,  E coupon information will be synchronized after 24 hours later.","由于系统原因，电子券会在24小时后同步"
 "Retrieve your password here", ""
+"From your My Account Dashboard you have the ability to view a snapshot of your recent account activity and update your account information. Select a link below to view or edit information.",""
 "Please enter your email address below. You will receive a link to reset your password.","输入邮箱地址。您将会收到重置密码的邮件。"
 "<p>Welcome to be a member of Lily club! </p>If you are not a lily club member, you can click the “Register Now” button to be our member. Free 200 points upon registration, countable with off-line purchases.","<p>欢迎来到Lily club! </p>如果您还不是Lily的会员，可以单击“立即注册”成为我们的粉丝。<br/>注册即送200积分，累计线下消费"
