--- a/app/locale/zh_CN/Mage_Cms.csv
+++ b/app/locale/zh_CN/Mage_Cms.csv
@@ -128,8 +128,9 @@
 "Welcome to", "欢迎来到"
 "User login","用户登录"
 "Offline user get the first password","线下会员获取首次登录密码"
+"Not Lily Club member?","还不是 lily club 会员？"
 "For system reason,  E coupon information will be synchronized after 24 hours later.","由于系统原因，电子券会在24小时后同步"
 "Retrieve your password here", ""
 "From your My Account Dashboard you have the ability to view a snapshot of your recent account activity and update your account information. Select a link below to view or edit information.",""
 "Please enter your email address below. You will receive a link to reset your password.","输入邮箱地址。您将会收到重置密码的邮件。"
-"If you are not a lily club member, you can click the “Register Now” button to be our member. Free 200 points upon registration, countable with off-line purchases.","如果您还不是Lily的会员，可以单击“立即注册”成为我们的粉丝。<br/>注册即送200积分，累计线下消费"
+"If you are not a lily club member, you can click the “Register Now” button to be our member. Free 200 points upon registration, countable with off-line purchases.","如果您还不是Lily的会员，可以单击“立即注册”成为我们的粉丝。注册即送200积分，累计线下消费（只限北京、上海、武汉、深圳和广州用户）"
