--- a/app/locale/zh_CN/Mage_Page.csv
+++ b/app/locale/zh_CN/Mage_Page.csv
@@ -162,8 +162,8 @@
 "Exchange Code:","兑换编号： "
 "Market Price:","市场参考价："
 "Exchange Now","立即兑换"
-"Required Points:","需要积分:"
-"Login to get the required points","请登录后查看兑换所需积分"
+"Required Points:","兑换积分:"
+"Login to get the required points","登陆可见"
 "Out of stock","已兑完"
 "Add to Wishlist","加入收藏"
 "Added already,please don`t add again.","已添加成功，请不要重复添加"
@@ -183,4 +183,6 @@
 "As Lily\'s brand declaration, Lily an avant-garde of office-chic brand combines business and style with perception, flatters women with simple yet graceful styling, and contributes to their confidence with beauty and elegancy.","正如Lily的品牌宣言，作为商务时装的创新典范，Lily品牌秉承时尚与商务完美融合的理念，以清新优雅、简约明快的风格，吸引着无数自信、优雅、独立的都市职业女性。"
 "Lily has staged several fashion shows on international fashion extravaganza, including Milan Fashion Week, German CPD, and was the winner of the New Designer Award at the former. We believe it is already safe to say that Lily has turned quite a few heads from the world fashion industry.","Lily品牌成功登陆国际米兰时装周、德国CPD等多个国际性时尚盛会，并在米兰时装周上荣膺“新锐设计师”大奖，成为国际时尚圈倍受关注的新锐时装品牌。"
 "Strength, feminity, modernity and vivacity are at the core of Lily’s DNA. Lily designers seek inspiration from modern artistry and accessorize with surrealism, modernism and Byzantine arts, creating a unique business chic that is “no more and no less” for urban ladies.","“力度、女性化、现代、明快”是Lily品牌产品风格DNA。设计师以“现代艺术范”为创作灵感核心，与超现实主义、摩登时代、拜占庭艺术等时尚潮流元素相结合，以简洁利落的廓形、独具创意的色彩和印花创造出独特的“正合适”商务时装美学。"
-"Up till now, Lily has branched over 500 stores in more than 220 cities of China, plus more than 50 stores in Russia, Saudi Arabia, Thailand, Malaysia and Dubai. As a leading brand of female office-chic fashion, Lily has proven itself to be worthy.","“Lily在中国开设有500余家品牌店铺，覆盖中国220多个城市，并在俄罗斯、沙特、泰国、马来西亚、迪拜等开设店铺逾50家。Lily品牌正开创全球一线女性商务时装的全新格局。"
+"Up till now, Lily has branched over 500 stores in more than 220 cities of China, plus more than 50 stores in Russia, Saudi Arabia, Thailand, Malaysia and Dubai. As a leading brand of female office-chic fashion, Lily has proven itself to be worthy.","“Lily在中国开设有500余家品牌店铺，覆盖中国220多个城市，并在俄罗斯、沙特、泰国、马来西亚、迪拜等开设店铺逾50家。Lily品牌正开创全球一线女性商务时装的全新格局。",
+"Welcome to lily club": "欢迎来到Lily Club",
+"You are not login": "您还没有登录"
