--- a/app/locale/zh_CN/Mage_Cms.csv
+++ b/app/locale/zh_CN/Mage_Cms.csv
@@ -129,6 +129,10 @@
 "User login","用户登录"
 "Offline user get the first password","线下会员获取首次登录密码"
 "Not Lily Club member?","还不是 lily club 会员？"
+"Please enter your telephone below.","请输入手机号码"
+"Login Now","立即登录"
+"Welcome to lily club","欢迎来到Lily Club"
+"You are not login","您还没有登录"
 "For system reason,  E coupon information will be synchronized after 24 hours later.","由于系统原因，电子券会在24小时后同步"
 "Retrieve your password here", ""
 "From your My Account Dashboard you have the ability to view a snapshot of your recent account activity and update your account information. Select a link below to view or edit information.",""
