--- a/app/locale/zh_CN/Mage_Checkout.csv
+++ b/app/locale/zh_CN/Mage_Checkout.csv
@@ -7,7 +7,7 @@
 "Add New Condition","添加新状态"
 "Add to Cart","购买"
 "Add to Compare","比较"
-"Add to Wishlist","收藏"
+"Add to Wishlist","加入收藏"
 "Address","地址"
 "Address %s of %s","第%s个地址，共%s个"
 "After adding a product redirect to shopping cart","加入商品后转到购物车"
