--- a/app/locale/zh_CN/Mage_Reports.csv
+++ b/app/locale/zh_CN/Mage_Reports.csv
@@ -2,7 +2,7 @@
 "Action","操作"
 "Add to Cart","加入购物车"
 "Add to Compare","比较"
-"Add to Wishlist","收藏"
+"Add to Wishlist","加入收藏"
 "Applied Coupon","优惠券已应用。"
 "Avg. approved rating","平均审核评级"
 "Avg. rating","平均评级"
