--- a/app/locale/zh_CN/Mage_Cms.csv
+++ b/app/locale/zh_CN/Mage_Cms.csv
@@ -134,6 +134,8 @@
 "Welcome to lily club","欢迎来到Lily Club"
 "You are not login","您还没有登录"
 "District", "区"
+"VIP TERMS","会员章程"
+"LOGIN/REGISTER","登录/注册"
 "Please select gender","请选择性别"
 "Added to Wishlist", "已加入收藏"
 "point(s)", "分"
