--- a/app/locale/zh_CN/Mage_Cms.csv
+++ b/app/locale/zh_CN/Mage_Cms.csv
@@ -84,6 +84,7 @@
 "CONTACT","联系我们"
 "PRIVACY","法律法规"
 "Account informations","帐号信息"
+"Welcome to Lily Club","欢迎来到Lily Club"
 "Member<br />Information","帐号信息"
 "My wishlist","我的收藏"
 "MY WISHLIST","我的收藏"
@@ -91,10 +92,10 @@
 "Point<br />History","积分兑换订单"
 "Giftcard","礼品车"
 "E-coupon","电子券"
+"Ecoupon<br />Information","电子券"
 "Gift Exchange","礼品兑换"
 "LOGOUT","退出"
 "Hi","您好"
-"Welcome to Lily Club","欢迎来到Lily会员中心"
 "Your remaining points","您的可用积分为:"
 "are %s point(s)","%s分"
 "Terms of lily membership", "会员章程"
@@ -131,7 +132,7 @@
 "Not Lily Club member?","还不是 lily club 会员？"
 "Please enter your telephone below.","请输入手机号码"
 "Login Now","立即登录"
-"Welcome to lily club","欢迎来到Lily Club"
+"Welcome to lily club","欢迎来到 Lily Club"
 "You are not login","您还没有登录"
 "District", "区"
 "VIP TERMS","会员章程"
