--- a/app/locale/zh_CN/Mage_Cms.csv
+++ b/app/locale/zh_CN/Mage_Cms.csv
@@ -1,5 +1,6 @@
 "(eg: domain.com/identifier)","(例如：domain.com/identifier)"
 "Action","操作"
+"DESCRIPTION", "备注"
 "Add New Block","添加新区块"
 "Add New Page","添加新页面"
 "All countries","所有国家"
