--- a/app/locale/zh_CN/Mage_Cms.csv
+++ b/app/locale/zh_CN/Mage_Cms.csv
@@ -141,6 +141,7 @@
 "Please select gender","请选择性别"
 "Added to Wishlist", "已加入收藏"
 "point(s)", "分"
+"%s was added to your shopping cart.","%s 已加到购物车"
 "For system reason,  E coupon information will be synchronized after 24 hours later.","由于系统原因，电子券会在24小时后同步"
 "Retrieve your password here", ""
 "From your My Account Dashboard you have the ability to view a snapshot of your recent account activity and update your account information. Select a link below to view or edit information.",""
