--- a/app/locale/zh_CN/Mage_Cms.csv
+++ b/app/locale/zh_CN/Mage_Cms.csv
@@ -84,7 +84,7 @@
 "JOB","招聘"
 "CONTACT","联系我们"
 "PRIVACY","法律法规"
-"Account informations","帐号信息"
+"Account informations","个人信息"
 "Welcome to Lily Club","欢迎来到Lily Club"
 "Member<br />Information","帐号信息"
 "My wishlist","我的收藏"
