--- a/app/locale/zh_CN/Mage_Customer.csv
+++ b/app/locale/zh_CN/Mage_Customer.csv
@@ -445,7 +445,7 @@
 "Log Out","Log Out"
 "First Name","名"
 "Last Name","姓"
-"Cell Phone","手机号码"
+"Cell Phone","手机号:"
 "Gender","性别"
 "Verify Code","验证手机验证码"
 "1. Verify","1. 手机验证"
