--- a/app/locale/zh_CN/Mage_Cms.csv
+++ b/app/locale/zh_CN/Mage_Cms.csv
@@ -128,7 +128,8 @@
 "Return to gift page","返回礼品页面"
 "Ecoupon<br />Information","电子券信息"
 "Welcome to", "欢迎来到"
-"User login","用户登录"
+"User login","会员登录"
+"Mobile","手机号"
 "Offline user get the first password","线下会员获取首次登录密码"
 "Not Lily Club member?","还不是 lily club 会员？"
 "Please enter your telephone below.","请输入手机号码"
@@ -141,9 +142,15 @@
 "Please select gender","请选择性别"
 "Added to Wishlist", "已加入收藏"
 "point(s)", "分"
+"e.g: 19850101","如19850101"
+"e.g: ABC@QQ.COM","如ABC@QQ.COM"
+"Verifying code","验证码"
+"Please enter password","请输入一个8-12位的密码，必须包含至少一位数字和字母，字母区分大小写"
 "%s was added to your shopping cart.","%s 已加到购物车"
 "For system reason,  E coupon information will be synchronized after 24 hours later.","由于系统原因，电子券会在24小时后同步"
 "Retrieve your password here", ""
+"Welcome be lily fans","欢迎您注册成为Lily粉丝"
+"Free 200 points upon registration, countable with off-line purchases. <br/>(Limited to Beijing,Shanghai,Wuhan,Shenzhen and Guangzhou.) ","注册即赠送200积分，累计线下消费<br/>(只限北京、上海、武汉、深圳和广州用户)"
 "From your My Account Dashboard you have the ability to view a snapshot of your recent account activity and update your account information. Select a link below to view or edit information.",""
 "Please enter your email address below. You will receive a link to reset your password.","输入邮箱地址。您将会收到重置密码的邮件。"
-"If you are not a lily club member, you can click the “Register Now” button to be our member. Free 200 points upon registration, countable with off-line purchases.","如果您还不是Lily的会员，可以单击“立即注册”成为我们的粉丝。注册即送200积分，累计线下消费（只限北京、上海、武汉、深圳和广州用户）"
+"If you are not a lily club member, you can click the “Register Now” button to be our member. Free 200 points upon registration, countable with off-line purchases.","请单击“立即注册”成为我们的粉丝，注册即送200积分，累计线下消费（只限北京、上海、武汉、深圳和广州用户）"
