--- a/app/locale/zh_CN/Mage_Page140110.csv
+++ b/app/locale/zh_CN/Mage_Page140110.csv
@@ -95,7 +95,7 @@
 "4008-91-9135 Mon. to Fri. 10:00-18:00","4008-91-9135    周一至周五10:00-18:00"
 "Free 200 points upon registration, countable with off-line purchases","Free，注册即送200积分，累计线下消费。"
 
-"Welcome to be a member of Lily club! Free 200 points upon registration, countable with off-line purchases. (Limited to Beijing,Shanghai,Wuhan,Shenzhen and Guangzhou.) ","欢迎您注册成为 Lily 粉丝，注册即送200积分，累计线下消费（只限北京、上海、武汉、深圳、广州）"
+"Welcome to be a member of Lily club! Free 200 points upon registration, countable with off-line purchases. (Limited to Beijing,Shanghai,Wuhan,Shenzhen and Guangzhou.) ","欢迎您注册成为 Lily 粉丝，注册即送200积分，累计线下消费<br/>（只限北京、上海、武汉、深圳、广州）"
 
 "you can click the ""Register Now"" button to be our fan.","可以单击“立即注册”成为我们的粉丝。"
 "Forgot Your Password?","忘记密码"
