--- a/app/locale/zh_CN/Mage_Adminhtml.csv
+++ b/app/locale/zh_CN/Mage_Adminhtml.csv
@@ -41,7 +41,7 @@
 "Account Created in:","帐号创建于："
 "Account Created on (%s):","帐号创建于（%s）"
 "Account Created on:","帐号创建于："
-"Account Information","帐号信息"
+"Account Information","个人信息"
 "Account status","帐号状态"
 "Account successfully saved","成功保存帐号"
 "Action","操作"
