--- a/app/locale/zh_CN/Mage_Cms.csv
+++ b/app/locale/zh_CN/Mage_Cms.csv
@@ -92,8 +92,8 @@
 "Point informations","积分明细"
 "Point<br />History","积分兑换订单"
 "Giftcard","礼品车"
-"E-coupon","电子券"
-"Ecoupon<br />Information","电子券"
+"E-coupon","优惠券"
+"Ecoupon<br />Information","优惠券"
 "Gift Exchange","礼品兑换"
 "LOGOUT","退出"
 "Hi","您好"
@@ -107,7 +107,7 @@
 "E-mail","电子邮件"
 "VIP Card","会员卡号"
 "VIP level","会员等级"
-"E coupon","电子券"
+"E coupon","优惠券"
 "Change password","修改密码"
 "Current password*","当前密码*"
 "New password*","新密码*"
@@ -126,7 +126,7 @@
 "Ship To", "收货人"
 "You have no items in your shopping cart.","您的购物车中还没有商品"
 "Return to gift page","返回礼品页面"
-"Ecoupon<br />Information","电子券信息"
+"Ecoupon<br />Information","优惠券信息"
 "Welcome to", "欢迎来到"
 "User login","会员登录"
 "Mobile","手机号"
@@ -138,6 +138,7 @@
 "You are not login","您还没有登录"
 "District", "区"
 "VIP TERMS","会员章程"
+"VIP CARD TERMS","会员卡章程"
 "LOGIN/REGISTER","登录/注册"
 "Please select gender","请选择性别"
 "Added to Wishlist", "已加入收藏"
@@ -147,7 +148,7 @@
 "Verifying code","验证码"
 "Please enter password","请输入一个8-12位的密码，必须包含至少一位数字和字母，字母区分大小写"
 "%s was added to your shopping cart.","%s 已加到购物车"
-"For system reason,  E coupon information will be synchronized after 24 hours later.","由于系统原因，电子券会在24小时后同步"
+"For system reason,  E coupon information will be synchronized after 24 hours later.","由于系统原因，优惠券会在24小时后同步"
 "Retrieve your password here", ""
 "Welcome be lily fans","欢迎您注册成为Lily粉丝"
 "Free 200 points upon registration, countable with off-line purchases. <br/>(Limited to Beijing,Shanghai,Wuhan,Shenzhen and Guangzhou.) ","注册即赠送200积分，累计线下消费<br/>(只限北京、上海、武汉、深圳和广州用户)"
