--- a/app/locale/zh_CN/Mage_Customer.csv
+++ b/app/locale/zh_CN/Mage_Customer.csv
@@ -451,12 +451,12 @@
 "1. Verify","1. 手机验证"
 "2. Fill in Personal Information","2. 填写个人信息"
 "Point Information","积分明细"
-"Ecoupon Information","电子券"
+"Ecoupon Information","优惠券"
 "Vip Card","我的卡号"
 "Card Validity","会员卡有效期"
 "Points","可用积分"
 "Vip Level","等级"
-"Electronic Coupons","电子券余额"
+"Electronic Coupons","优惠券余额"
 "Province","省市"
 "You Have No Account In System.","您还未注册"
 "Get Activate","线下激活"
