--- a/app/locale/zh_CN/Mage_Page140110.csv
+++ b/app/locale/zh_CN/Mage_Page140110.csv
@@ -85,7 +85,7 @@
 ", hello!","，您好"
 "Wishlist","收藏夹"
 "Gift cart","礼品车"
-"My Account","账号中心"
+"My Account","个人信息"
 "Log out","退出"
 "Please input","请填写"
 "points.","分。"
