--- a/app/locale/zh_CN/Mage_Cms.csv
+++ b/app/locale/zh_CN/Mage_Cms.csv
@@ -126,7 +126,7 @@
 "Ship To", "收货人"
 "You have no items in your shopping cart.","您的购物车中还没有商品"
 "Return to gift page","返回礼品页面"
-"Ecoupon<br />Information","优惠券信息"
+"Ecoupon<br />Information","优惠券"
 "Welcome to", "欢迎来到"
 "User login","会员登录"
 "Mobile","手机号"
