--- a/app/locale/zh_CN/Mage_Adminhtml.csv
+++ b/app/locale/zh_CN/Mage_Adminhtml.csv
@@ -746,7 +746,7 @@ Advanced Admin Section"""
 "SSL Error: Invalid or self-signed certificate","SSL 错误信息：无效或自签署的认证"
 "Sales Report","销售报告"
 "Samples","样本"
-"Save","储存"
+"Save","保存"
 "Save & Generate","储存并生成"
 "Save Account","储存帐号"
 "Save And Continue Edit","保存并继续修改"
