--- a/app/locale/zh_CN/Mage_Adminhtml1128.csv
+++ b/app/locale/zh_CN/Mage_Adminhtml1128.csv
@@ -331,7 +331,7 @@ Advanced Admin Section"""
 "Extension Name","扩展名"
 "Extensions","插件"
 "FTP Host[:Port]","FTP 主机[:端口]"
-"Failed to add a product to cart by id ""%s""","按序号 ""%s"" 添加商品到购物车失败"
+"Failed to add a product to cart by id ""%s""","按序号 ""%s"" 添加商品到礼品车失败"
 "Failed to load %1$s.xml or %1$s.ser","加载 %1$s.xml 或 %1$s.ser 失败"
 "Field","行（栏）"
 "Field Mapping","映射（Mapping）行"
@@ -746,7 +746,7 @@ Advanced Admin Section"""
 "SSL Error: Invalid or self-signed certificate","SSL 错误信息：无效或自签署的认证"
 "Sales Report","销售报告"
 "Samples","样本"
-"Save","储存"
+"Save","保存"
 "Save & Generate","储存并生成"
 "Save Account","储存帐号"
 "Save And Continue Edit","保存并继续修改"
@@ -798,7 +798,7 @@ Advanced Admin Section"""
 "Shipping method must be specified","请指定配送方式"
 "Shipping method selection is not applicable","配送方法选项不成立。"
 "Shipping origin","发货地"
-"Shopping Cart from %s","%s的购物车"
+"Shopping Cart from %s","%s的礼品车"
 "Show Report for","显示报告"
 "Show by","显示"
 "Show reviews","查看评论"
