--- a/app/locale/zh_CN/Mage_Cms.csv
+++ b/app/locale/zh_CN/Mage_Cms.csv
@@ -86,7 +86,7 @@
 "PRIVACY","法律法规"
 "Account informations","个人信息"
 "Welcome to Lily Club","欢迎来到Lily Club"
-"Member<br />Information","帐号信息"
+"Member<br />Information","个人信息"
 "My wishlist","我的收藏"
 "MY WISHLIST","我的收藏"
 "Point informations","积分明细"
@@ -104,11 +104,13 @@
 "Forget your Password", "忘记密码"
 "Birthday","生日"
 "Zip/Post code","邮编"
-"E-mail","电子邮件"
+"E-mail","电邮"
 "VIP Card","会员卡号"
+"My Card","我的卡号"
 "VIP level","会员等级"
+"Level","等级"
 "E coupon","优惠券"
-"Change password","修改密码"
+"Change password","更换登录密码"
 "Current password*","当前密码*"
 "New password*","新密码*"
 "Confirm new password*","确认新密码*"
