--- a/app/locale/zh_CN/Mage_Page.csv
+++ b/app/locale/zh_CN/Mage_Page.csv
@@ -75,7 +75,7 @@
 "Exchange Points:","兑换积分："
 "Please login to see the required points","登录后查看兑换所需积分"
 "Place Order","确认提交"
-"Back to the gift cart","返回购物车修改"
+"Back to the gift cart","返回礼品车修改"
 "Gift Exchaning Page","积分兑换首页"
 "Store Picking Up, Free!","店铺自取，免运费"
 "Unit points:","单件消费积分："
@@ -83,8 +83,8 @@
 "Total Qty","数量总计"
 "Total Points","本次使用积分"
 "Warm tips:","温馨提示："
-"As the quantity of the gift is changing all the time , exchange result is only associated with the success status of the order.","抢兑商品库存时刻变化中，抢兑成功与否，请以实际生成订单显示“兑换成功”为准。"
-"As the quantity of the gift is changing all the time , exchanging result is only associated with the success status of the order.","抢兑商品库存时刻变化中，抢兑成功与否，请以实际生成订单显示“兑换成功”为准。"
+"As the quantity of the gift is changing all the time , exchange result is only associated with the success status of the order.","兑换成功后， 系统将自动给您手机号发送验证码，验证码是您领取礼品的重要凭证，请勿泄露给他人。 "
+"As the quantity of the gift is changing all the time , exchanging result is only associated with the success status of the order.","兑换成功后， 系统将自动给您手机号发送验证码，验证码是您领取礼品的重要凭证，请勿泄露给他人。 "
 "Please Login","请登录"
 "Sorry, the FANS level cannot exchange any gifts.","很抱歉，粉丝无礼品兑换资格"
 ", hello!","，您好"
@@ -136,7 +136,7 @@
 "Consumption amount","消费金额"
 "Opps,Some Error on Connection.","哎呀，连接出现了问题。"
 "You Have No Vip Cards.","您还没有任何vip卡"
-"Record No.","单据编号"
+"Record No.","订单编号"
 "Date","日期"
 "Lily Office-chic official","Lily商务时装官网"
 "Forgot Your Password","忘记密码"
@@ -163,7 +163,7 @@
 "Market Price:","市场参考价："
 "Exchange Now","立即兑换"
 "Required Points:","兑换积分:"
-"Login to get the required points","登陆可见"
+"Login to get the required points","登录可见"
 "Out of stock","已兑完"
 "Add to Wishlist","加入收藏"
 "Added already,please don`t add again.","已添加成功，请不要重复添加"
