--- a/app/locale/zh_CN/Mage_Sales.csv
+++ b/app/locale/zh_CN/Mage_Sales.csv
@@ -278,7 +278,7 @@
 "Order Information","订单详情"
 "Order Invoices","订单发票"
 "Order Shipments","订单货单"
-"Order Status","订单状态"
+"Order Status","状态"
 "Order Subtotal","订单小计"
 "Order Subtotal:","订单小计："
 "Order Total","订单合计"
@@ -515,7 +515,7 @@
 "Gift history","积分兑换订单"
 "Order Type","订单类型"
 "Exchange From Webstore","网站兑换"
-"Order Num","单据编号"
+"Order Num","订单编号"
 "Gift Of Order","订单礼品"
 "Operation","操作"
 "Member Info:","会员信息："
@@ -543,10 +543,10 @@
 "Please Select Point Level","选择积分范围"
 "Search by keywords:","按礼品关键字搜索"
 "Checkout","确认订单"
-"Succeed","恭喜，订单已成功提交"
+"Succeed","恭喜，订单已成功递交"
 "This Product Already In Your Wishlist","添加成功，请不要重复添加"
 "loading...","正在提交..."
-"Your order has been received.","恭喜，订单已成功提交"
+"Your order has been received.","恭喜，订单已成功递交"
 "Your Points Not Enough To Update Cart","您的积分不足，无法增加更多礼品"
 "You Must Login.","您需要登录后才可兑换礼品。"
 "You Have Already Exchange Product In This Month","您本月已经成功提交了一次礼品兑换单，请下月再来换哦"
