--- a/app/locale/zh_CN/Mage_Catalog1128.csv
+++ b/app/locale/zh_CN/Mage_Catalog1128.csv
@@ -469,7 +469,7 @@ Retrieve categories tree"""
 "Roll Over for preview","（鼠标）滑过预览"
 "Root","根（最高级目录）"
 "SKU","SKU"
-"Save","储存"
+"Save","保存"
 "Save And Continue Edit","保存并继续修改"
 "Save Attribute","储存属性"
 "Save Attribute Set","储存属性组"
@@ -645,7 +645,7 @@ Retrieve categories tree"""
 "per page","件"
 "products","商品"
 "px.","px."
-"save","储存"
+"Save","保存"
 "select all","全选"
 "unselect all","去除全选"
 "x","x"
