--- a/app/locale/zh_CN2014-1-2/Mage_Customer.csv
+++ b/app/locale/zh_CN2014-1-2/Mage_Customer.csv
@@ -282,7 +282,7 @@
 "Retrieve your password here","获取你的密码"
 "SKU","SKU"
 "Sales Statistics","销售统计报告"
-"Save","储存"
+"Save","保存"
 "Save Address","储存地址"
 "Save And Continue Edit","Save And Continue Edit"
 "Save Customer","储存顾客"
