--- a/app/design/frontend/default/default/locale/zh_CN/translate.csv
+++ b/app/design/frontend/default/default/locale/zh_CN/translate.csv
@@ -1,1 +1,2 @@
 "Keep your eyes open for our special Back to School items and save A LOT!","请随时关注我们的新学期开学大促销，惊喜不断！"
+"Express with 1500 points","直接快递，运费需花1500积分"
