--- a/app/locale/zh_CN/Mage_Customer.csv
+++ b/app/locale/zh_CN/Mage_Customer.csv
@@ -473,3 +473,4 @@
 "Gift List:","兑换清单："
 "The Password Has Been Sent.","密码短信已发送。"
 "You Are Online ","您已是在线用户"
+"The account information has been saved", "账户资料已保存"
