--- a/app/locale/zh_CN/Mage_Cms.csv
+++ b/app/locale/zh_CN/Mage_Cms.csv
@@ -133,7 +133,7 @@
 "User login","会员登录"
 "Mobile","手机号"
 "Offline user get the first password","线下会员获取首次登录密码"
-"Not Lily Club member?","还不是 lily club 会员？"
+"Not Lily Club member?","还不是 Lily club 会员？"
 "Please enter your telephone below.","请输入手机号码"
 "Login Now","立即登录"
 "Welcome to lily club","欢迎来到 Lily Club"
