--- a/app/locale/zh_CN/Mage_Cms.csv
+++ b/app/locale/zh_CN/Mage_Cms.csv
@@ -138,7 +138,7 @@
 "Login Now","立即登录"
 "Welcome to lily club","欢迎来到 Lily Club"
 "You are not login","您还没有登录"
-"Please Enter Keyword","请输入款键词"
+"Please Enter Keyword","请输入关键词"
 "District", "区"
 "VIP TERMS","会员章程"
 "VIP CARD TERMS","会员卡章程"
