--- a/app/locale/zh_CN/Mage_Cms.csv
+++ b/app/locale/zh_CN/Mage_Cms.csv
@@ -149,9 +149,12 @@
 "e.g: 19850101","如19850101"
 "e.g: ABC@QQ.COM","如ABC@QQ.COM"
 "Verifying code","验证码"
+"Gift Catalog","礼品目录"
+"Price", "价格"
 "Please enter password","请输入一个8-12位的密码，必须包含至少一位数字和字母，字母区分大小写"
 "%s was added to your shopping cart.","%s 已加到购物车"
 "For system reason,  E coupon information will be synchronized after 24 hours later.","由于系统原因，优惠券会在24小时后同步"
+"For system reason, point information will be synchronized after 24 hours later.","由于系统原因，积分会在24小时后同步"
 "Retrieve your password here", ""
 "Welcome be lily fans","欢迎您注册成为Lily粉丝"
 "Free 200 points upon registration, countable with off-line purchases. <br/>(Limited to Beijing,Shanghai,Wuhan,Shenzhen and Guangzhou.) ","注册即赠送200积分，累计线下消费<br/>(只限北京、上海、武汉、深圳和广州用户)"
