--- a/app/locale/zh_CN/Mage_Page.csv
+++ b/app/locale/zh_CN/Mage_Page.csv
@@ -136,7 +136,7 @@
 "Consumption amount","消费金额"
 "Opps,Some Error on Connection.","哎呀，连接出现了问题。"
 "You Have No Vip Cards.","您还没有任何vip卡"
-"Record No.","订单编号"
+"Record No.","单据编号"
 "Date","日期"
 "Lily Office-chic official","Lily商务时装官网"
 "Forgot Your Password","忘记密码"
