--- a/app/locale/zh_CN/Mage_Cms.csv
+++ b/app/locale/zh_CN/Mage_Cms.csv
@@ -151,6 +151,7 @@
 "Verifying code","验证码"
 "Gift Catalog","礼品目录"
 "Price", "价格"
+"Telphone Has Already In System.","手机号码已存在"
 "Please enter password","请输入一个8-12位的密码，必须包含至少一位数字和字母，字母区分大小写"
 "%s was added to your shopping cart.","%s 已加到购物车"
 "For system reason,  E coupon information will be synchronized after 24 hours later.","由于系统原因，优惠券会在24小时后同步"
